--- a/vlibtour-bikestation/src/main/resources/rest.properties
+++ b/vlibtour-bikestation/src/main/resources/rest.properties
@@ -1,10 +1,10 @@
 # Real server
-jcdecaux.rooturl=https://api.jcdecaux.com/vls/v1
-jcdecaux.contract=lyon
+#jcdecaux.rooturl=https://api.jcdecaux.com/vls/v1
+#jcdecaux.contract=Paris
 #
 # Emulated server
 #
-#jcdecaux.rooturl=http://localhost:8888/MyServer/
-#jcdecaux.contract=paris
+jcdecaux.rooturl=http://localhost:8888/MyServer/
+jcdecaux.contract=paris
 # Your key
-jcdecaux.apiKey=91f170cdabb4c3227116c3e871a63e8d3ad148ee
+apiKey=e282afdd13aca4cba4fb505603d5224d4a9cad03
