--- a/vlibtour-tour-management/pom.xml
+++ b/vlibtour-tour-management/pom.xml
@@ -35,7 +35,12 @@ Contributor(s):
     <dependency>
       <groupId>javax</groupId>
       <artifactId>javaee-api</artifactId>
-    </dependency>        
+    </dependency> 
+    <dependency>
+      <groupId>eu.telecomsudparis.vlibtour.vlibtour-libraries</groupId>
+      <artifactId>vlibtour-common</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>       
   </dependencies>
 
   <modules>
