create bean-client to test

--- a/vlibtour-tour-management/pom.xml
+++ b/vlibtour-tour-management/pom.xml
@@ -42,5 +42,6 @@ Contributor(s):
     <module>vlibtour-tour-management-entity</module>
     <module>vlibtour-tour-management-api</module>
     <module>vlibtour-tour-management-bean</module>
+    <module>vlibtour-tour-management-client</module>
   </modules>
 </project>
